Add /order route get method and cart item owner validation in /cart routes
